# rairplay

./: .gitignore  .gitmodules  Cargo.toml  README.md  build.rs  ffplay_h264.sh  flake.nix  play_pcm.sh  publish_service.sh  rtpmp4gdepay_fix_constantduration_condition.patch  rust-toolchain  rust-toolchain.toml  rustfmt.toml
.github/workflows/: nix-github-actions.yml  radicle.yaml  rust.yml
airplay/: Cargo.toml  build.rs
airplay/src/: config.rs  lib.rs  net.rs
airplay/src/config/: mod.rs  pin.rs
airplay/src/config/keychain/: default.rs  mod.rs
airplay/src/crypto/: fairplay.rs  mod.rs  streaming.rs
airplay/src/crypto/pairing/: legacy.rs
airplay/src/pairing/: codec.rs  mod.rs
airplay/src/pairing/homekit/: codec.rs  dto.rs  mod.rs  state.rs
airplay/src/pairing/homekit/extractor/: mod.rs
airplay/src/pairing/homekit/handlers/: mod.rs  setup.rs  verify.rs
airplay/src/pairing/homekit/transport/: codec.rs
airplay/src/pairing/legacy/: mod.rs  state.rs
airplay/src/pairing/legacy/handlers/: inner.rs  mod.rs
airplay/src/playback/: audio.rs  mod.rs  null.rs  video.rs
airplay/src/rtsp/: dto.rs  extractor.rs  handlers.rs  mod.rs  state.rs
airplay/src/rtsp/handlers/: fairplay.rs  mod.rs
airplay/src/rtsp/transport/: codec.rs  mod.rs
airplay/src/streaming/: mod.rs  sync.rs
airplay/src/streaming/processing/: crypto.rs  mod.rs
airplay/src/transport/: mod.rs
airplay/src/util/: mod.rs
examples/common/: Cargo.toml
examples/common/src/: discovery.rs  lib.rs  playback.rs
examples/gpui/: Cargo.toml
examples/gpui/src/: audio.rs  discovery.rs  main.rs  ui.rs  video.rs
examples/pipe2file/: Cargo.toml
examples/pipe2file/src/transport/: util.rs
examples/trancode2file/: Cargo.toml
examples/trancode2file/src/: audio.rs  main.rs  playback.rs  video.rs
examples/trancode2file/src/transport/: codec.rs  mod.rs
homekit/: Cargo.toml
homekit/src/: config.rs
homekit/src/service/: dto.rs  mod.rs  state.rs
homekit/src/service/extractor/: endec.rs  mod.rs
homekit/src/service/handlers/: handshake.rs  mod.rs
lib/: Cargo.toml  build.rs
lib/ffmpeg_test/: h264decode.c
lib/src/: config.rs  feats.rs  ffi.rs  info.rs  lib.rs  mod.rs  state.rs
lib/src/channels/audio/: buffer.rs  mod.rs
lib/src/channels/audio/buffered/: mod.rs
lib/src/channels/video/: packet.rs
lib/src/crypto/: audio.rs  fairplay.rs  mod.rs  streaming.rs  video.rs
lib/src/crypto/pairing/: legacy.rs
lib/src/device/: mod.rs  null.rs
lib/src/playback/: audio.rs  mod.rs  null.rs
lib/src/rtsp/: dto.rs  extractor.rs  handlers.rs  mod.rs  plist.rs  state.rs
lib/src/rtsp/handlers/: mod.rs
lib/src/service/: mod.rs  plist.rs  state.rs
lib/src/streaming/: buffer.rs  command.rs  event.rs  mod.rs  processing.rs
lib/src/streaming/audio/: buffered.rs  mod.rs  packet.rs  realtime.rs
lib/src/streaming/audio/buffered/: mod.rs
lib/src/streaming/event/: mod.rs
lib/src/streaming/video/: buffered.rs  mod.rs  packet.rs
lib/src/transport/: codec.rs  mod.rs
lib/src/util/: constants.rs  io.rs  jitter.rs  memory.rs  mod.rs  sync.rs
lib/src/util/crypto/pairing/: legacy.rs
rairplay/: Cargo.toml
rairplay/src/: config.rs  lib.rs
rairplay/src/crypto/: mod.rs  streaming.rs
rairplay/src/crypto/pairing/: legacy.rs  mod.rs
rairplay/src/playback/: audio.rs  mod.rs  null.rs  video.rs
rairplay/src/rtsp/: dto.rs  handlers.rs
rairplay/src/streaming/: mod.rs  processing.rs
rairplay/src/util/: mod.rs  sync.rs
src/: adv.rs  advertisment.rs  audio.rs  clock.rs  discovery.rs  feats.rs  info.rs  lib.rs  main.rs  playback.rs  plist.rs  publish.rs  server.rs  session.rs  state.rs  transport.rs  video.rs
src/auth/: rsa.rs
src/channels/: mod.rs
src/channels/audio/: mod.rs  packet.rs
src/channels/audio/buffered/: mod.rs
src/channels/event/: mod.rs
src/channels/video/: mod.rs
src/clock/ntp/: mod.rs  packet.rs  timestamp.rs
src/codec/: audio.rs  rtsp.rs
src/codecs/: encrypted.rs  mod.rs  rtp.rs  rtsp.rs
src/config/: mod.rs  pin.rs
src/config/keychain/: mod.rs
src/crypt/: aes.rs  dummy.rs  mod.rs  rsa.rs
src/crypto/: mod.rs
src/layer/: mod.rs
src/pairing/homekit/: state.rs
src/pairing/homekit/extractor/: endec.rs
src/playback/: audio.rs  mod.rs  video.rs
src/rtp/: audio.rs  codec.rs  mod.rs
src/rtsp/: codec.rs  dto.rs  flush.rs  fp_setup.rs  get_parameter.rs  info.rs  layer.rs  mod.rs  plist.rs  record.rs  service.rs  set_parameter.rs  setpeers.rs  setrateanchortime.rs  setup.rs  state.rs  teardown.rs  unknown.rs
src/rtsp/dto/: mod.rs
src/rtsp/handlers/: flushbuffered.rs  get_parameter.rs  info.rs  mod.rs  set_parameter.rs  setrateanchortime.rs  setup.rs  teardown.rs
src/rtsp/rtp/: crypt.rs  mod.rs  packet.rs
src/rtsp/rtp/audio/: codec.rs  mod.rs
src/service/: dto.rs  fairplay.rs  handlers.rs  mod.rs  rtsp.rs  state.rs
src/service/handlers/: flushbuffered.rs  generic.rs  get_parameter.rs  info.rs  setrateanchortime.rs  setup.rs
src/services/: mod.rs  rtp.rs  rtsp.rs  session.rs
src/streaming/audio/: buffer.rs
src/streaming/audio/buffered/: mod.rs
src/streaming/processing/: memory.rs  mod.rs
src/streams/: audio.rs
src/transport/: codec.rs  mod.rs
