[package]
name = "rairplay"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
tracing = "0.1"

# Publishing service
mdns-sd = "0.10"

# Transport
http-body = "1"
httparse = "1"
bytes = "1"
tokio = { version = "1.35.1", features = ["full"] }
tokio-util = { version = "0.7", features = ["compat"] }
tower = "0.4"
hyper = { version = "1", features = ["server"] }
hyper-util = { version = "0.1", features = ["tokio"] }
futures = "0.3"
pin-project-lite = "0.2"

# HTTP/RTSP service
axum = { version = "0.7" }
