[package]
name = "rairplay"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
tracing = "0.1"

# Publishing service
mdns-sd = "0.10"

# Transport
tower = "0.4"
bytes = "1"
httparse = "1"
pin-project-lite = "0.2"
# TODO : remove full, it's for developing
tokio = { version = "1.35", features = ["net", "io-util", "full"] }
tokio-util = { version = "0.7", features = ["codec", "io"] }
hyper = { version = "1", features = ["server"] }
hyper-util = { version = "0.1", features = ["tokio"] }

# HTTP/RTSP service
axum = { version = "0.7" }
