[package]
name = "airplay"
version = "0.1.0"
edition = "2024"

[dependencies]
derivative = "2.2.0"
tracing = "0.1"
thiserror = "1"
weak-table = "0.3.2"
strum = { version = "0.27", features = ["derive"] }

serde = { version = "1", features = ["derive"] }
macaddr = { version = "1", features = ["serde"] }
bytes = { version = "1", features = ["serde"] }
bitflags = { version = "2", features = ["serde"] }
plist = "1"

rand = "0.9.2"
sha2 = "0.10"
aes = "0.8"
ctr = "0.9"
cbc = "0.1.2"
num-bigint = "0.4.6"
srp = "0.6"
hkdf = "0.12"
x25519-dalek = { version = "2.0", features = ["static_secrets"] }
ed25519-dalek = "2"
chacha20poly1305 = "0.10"

http = "1"
httparse = "1"
tower = "0.5.2"
tower-http = { version = "0.6.2", features = ["propagate-header"] }
tokio = { version = "1.44", features = ["rt", "net", "io-util"] }
tokio-util = { version = "0.7", features = ["codec", "io"] }
axum = { version = "0.8.1", default-features = false, features = ["tokio", "http1", "http2"] }
futures = { version = "0.3.31", default-features = false, features = ["std"] }

[build-dependencies]
glob = "0.3.1"
cc = "1.0"

[dev-dependencies]
hex = "0.4"
base64 = "0.22"
