[package]
name = "airplay"
version = "0.1.0"
edition = "2024"

[dependencies]
derivative = "2.2.0"
tracing = "0.1"
thiserror = "1"
weak-table = "0.3.2"
strum = { version = "0.27", features = ["derive"] }
seqlock = "0.2.0"

serde = { version = "1", features = ["derive"] }
macaddr = { version = "1", features = ["serde"] }
bytes = { version = "1", features = ["serde"] }
bitflags = { version = "2", features = ["serde"] }
plist = "1"

rand = "0.10"
sha2 = "0.11.0-rc.4"
aes = "0.8"
ctr = "0.9"
cbc = "0.1.2"
# srp = "0.7.0-rc.1"
srp = { git = "https://github.com/r4v3n6101/PAKEs", branch = "homekit_srp" }
hkdf = "0.13.0-rc.5"
x25519-dalek = "3.0.0-pre.6"
ed25519-dalek = "3.0.0-pre.6"
chacha20poly1305 = { version = "0.11.0-rc.3", features = ["bytes"] }

http = "1"
httparse = "1"
tower = "0.5.2"
tower-http = { version = "0.6.2", features = ["propagate-header"] }
tokio = { version = "1.44", features = ["rt", "net", "io-util"] }
tokio-util = { version = "0.7", features = ["codec", "io"] }
tokio_dual_stack = "0.2.0"
axum = { version = "0.8.1", default-features = false, features = ["tokio", "http1", "http2"] }
futures = { version = "0.3.31", default-features = false, features = ["std"] }
yoke = "0.8.1"

[build-dependencies]
glob = "0.3.1"
cc = "1.0"

[dev-dependencies]
hex = "0.4"
base64 = "0.22"
