[package]
name = "rairplay"
version = "0.1.0"
edition = "2021"

[dependencies]
tracing = "0.1"
thiserror = "2"

serde = { version = "1", features = ["derive"] }
macaddr = { version = "1", features = ["serde"] }
bytes = { version = "1", features = ["serde"] }
bitflags = { version = "2", features = ["serde"] }

http = "1"
tower = "0.4"
tower-http = { version = "0.5", features = ["propagate-header"] }
tokio = { version = "1.40", features = ["rt", "net", "io-util"] }
axum = { version = "0.7", default-features = false, features = ["tokio"] }
async-trait = "0.1"
plist = "1"

ring = "0.17"
