[package]
name = "rairplay"
version = "0.1.0"
edition = "2021"

[dependencies]
tracing = "0.1"
thiserror = "1"

serde = { version = "1", features = ["derive"] }
macaddr = { version = "1", features = ["serde"] }
bytes = { version = "1", features = ["serde"] }
bitflags = { version = "2", features = ["serde"] }

ring = "0.17"
aes = "0.8"
ctr = "0.9"

http = "1"
tower = "0.5"
tower-http = { version = "0.5", features = ["propagate-header"] }
tokio = { version = "1.40", features = ["rt", "net", "io-util"] }
axum = { version = "0.7", default-features = false, features = ["tokio"] }
async-trait = "0.1"
plist = "1"

[build-dependencies]
glob = "0.3.1"
cc = "1.0"

[dev-dependencies]
hex = "0.4"
base64 = "0.22"
