[package]
name = "rairplay"
version = "0.1.0"
edition = "2021"

[dependencies]
derivative = "2.2.0"
tracing = "0.1"
thiserror = "1"
weak-table = "0.3.2"

serde = { version = "1", features = ["derive"] }
macaddr = { version = "1", features = ["serde"] }
bytes = { version = "1", features = ["serde"] }
bitflags = { version = "2", features = ["serde"] }
plist = "1"

ring = "0.17"
aes = "0.8"
ctr = "0.9"

http = "1"
tower = "0.5.2"
tower-http = { version = "0.6.2", features = ["propagate-header"] }
tokio = { version = "1.44", features = ["rt", "net", "io-util"] }
axum = { version = "0.8.1", default-features = false, features = ["tokio"] }
want = "0.3.1"
cbc = "0.1.2"

[build-dependencies]
glob = "0.3.1"
cc = "1.0"

[dev-dependencies]
hex = "0.4"
base64 = "0.22"
