[package]
name = "example-gpui"
version = "0.1.0"
edition = "2024"
publish = false

[[bin]]
name = "rairplay-gpui"
path = "src/main.rs"

[dependencies]
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
airplay = { path = "../../airplay/" }
example-common = { path = "../common" }

http = "1.3"
httparse = "1"
pin-project-lite = "0.2"
tower = "0.5.1"

axum = { version = "0.8.6", default-features = false, features = ["http1", "http2"] }
tokio = { version = "1.41.1", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec", "io"] }
gstreamer = "0.23.6"
gstreamer-app = "0.23.5"
gstreamer-video = "0.23.6"
image = "0.25.1"
smallvec = "1.13.2"
gpui = "0.2.2"
core-text = "=21.0.0"
