[package]
name = "example-transcode2file"
version = "0.1.0"
edition = "2024"
publish = false

[[bin]]
name = "rairplay-transcode2file"
path = "src/main.rs"

[dependencies]
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
tracing-chrome = "0.7.2"
mdns-sd = "0.11.5"
airplay = { path = "../../airplay/" }

http = "1.3"
httparse = "1"
pin-project-lite = "0.2"
tower = "0.5.1"

axum = { version = "0.8.6", default-features = false, features = ["http1", "http2"] }
tokio = { version = "1.41.1", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec", "io"] }
clap = { version = "4.5.39", features = ["derive"] }
gstreamer = "0.23.6"
gstreamer-app = "0.23.5"
